[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/SuperPumpkin/super-pumpkin-1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/SuperPumpkin.gd" type="Script" id=2]
[ext_resource path="res://Assets/SuperPumpkin/super-pumpkin-2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="SuperPumpkin" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SmashStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_SuperPumpkin_body_entered"]
[connection signal="finished" from="SmashStreamPlayer" to="." method="_on_SmashStreamPlayer_finished"]
